# mcp-postal-geocoder

./: .gitattributes  .gitignore  CLAUDE.md  README.md  app.py  mcp_postal_code_plan.md  packages.txt  postal_database_documentation.md  pyproject.toml  requirements.txt  run_mcp_server.py  space_config.yml  streamlit_app.py  zip_data_attribution.md
.github/workflows/: sync-to-hf.yml
data/: README.md
src/mcp_postal_geocoder/: __init__.py
src/mcp_postal_geocoder/client/: __init__.py  cli_tool.py
src/mcp_postal_geocoder/server/: __init__.py  mcp_server.py
src/mcp_postal_geocoder/server/database/: __init__.py  connection.py  models.py  queries.py
src/mcp_postal_geocoder/server/tools/: __init__.py
src/mcp_postal_geocoder/server/utils/: __init__.py  response_formatter.py
